--- a/css/main.css
+++ b/css/main.css
@@ -2061,7 +2061,7 @@ input::-moz-focus-inner {
 	background-color: var(--color-primary);
 	background-image: url("../material/jesus.jpg");
 	background-repeat: no-repeat;
-	background-position: 20% center;
+	background-position: center;
 	background-size: cover;
 	position: relative;
 }
